# my-car

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  PROJECT_OVERVIEW.md  Procfile  README.md  main.py  pyproject.toml  railway.json
config/: __init__.py  settings.py
integrations/: __init__.py  smartcar_client.py  supabase_client.py
models/: __init__.py  schemas.py
services/: __init__.py  llm_service.py  telegram_bot.py
supabase/: config.toml
supabase/migrations/: 20260204200403_initial_schema.sql
tests/: __init__.py  test_models.py
utils/: __init__.py  helpers.py
